# 2d-game-tests

./: CMakeLists.txt
sprite-movement/: CMakeLists.txt  README.md
sprite-movement/assets/: maps.qrc  players.qrc  settings.rc  sprites.qrc
sprite-movement/assets/maps/greenmap/: greenmap.json  greenmap.tmx
sprite-movement/assets/qml/: main.qml
sprite-movement/assets/sprites/maps/greenmap/: greenmap.json  layout.json
sprite-movement/plugins/: CMakeLists.txt  generalsettings.cpp  generalsettings.h  map.cpp  map.h  mapsettings.cpp  mapsettings.h  playersettings.cpp  playersettings.h  qmldir  settings.cpp  settings.h  spritemovementsettingsplugin.cpp  spritemovementsettingsplugin.h
sprite-movement/plugins/mapparsers/: tiledjsonparser.cpp  tiledjsonparser.h
sprite-movement/src/: CMakeLists.txt  applicationview.cpp  applicationview.h  auxconfig.h.in  core.cpp  core.h  main.cpp  player.cpp  player.h
